2012-12-28  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* DevNotes: Add entry cgf-000019.
	* dcrt0.cc (do_exit): Just set exit_state to ES_EVENTS_TERMINATE and
	nuke call to events_terminate which just set a superfluous flag.
	* sigproc.cc (signal_exit_code): New variable.
	(setup_signal_exit): Define new function.
	(_cygtls::signal_exit): Remove accommodations for closing the signal
	pipe handle.
	(exit_thread): Just sleep if we're exiting.
	(wait_sig): If signal_exit_code is set, just handle bookkeeping signals
	and exit ReadFile loop if there is nothing more to process.  Call
	signal_exit at end if signal_exit_code is non-zero.
	* sigproc.h (setup_signal_exit): Declare new function.
	* exceptions.cc (sigpacket::process): Use setup_signal_exit to control
	exiting due to a signal.
	(exception::handle): Ditto.  Query exit_state rather than defunct
	exit_already to determine if we are exiting.
	* globals.cc (ES_SIGNAL_EXIT): New enum.
	* sync.h (lock_process::release): New function for explicitly unlocking
	muto.
	(lock_process::~lock_process): Use release method.

2012-12-27  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* fork.cc (child_info::prefork): Fix error message formatting.

2012-12-22  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* select.h (select_stuff): Remove variable names from parameter
	declarations.
	(select_info): Ditto.
	(select_record::dump_select_record): Declare new debugging-only
	function.
	(select_info): Zero all fields.
	(select_pipe_info): Ditto.
	(select_socket_info): Ditto.
	(select_serial_info): Ditto.
	(select_mailslot_info): Ditto.
	* select.cc (select_record::dump_select_record): Define new
	debugging-only function.
	(select_stuff::test_and_set): Call dump_select_record when debugging.

	* thread.cc (pthread_mutex::unlock): Revert setting of tid to 0 since,
	in this context, it is a number, not a pointer.
	(pthread_spinlock::unlock): Ditto.

2012-12-21  Christopher Faylor  <me.cygwin2012@cgf.cx>
